# mcp-server

./: .env  .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
.cursor/rules/: mcp_docs.mdc  package_management.mdc  weave_trace_server.mdc
examples/: raw_weave_api_example.py  weave_curl_examples.sh
src/mcp_server/: add_to_client.py  query.py  query_bot_api.py  query_models.py  query_weave.py  report.py  server.py  utils.py
src/wandb_mcp_server/: __init__.py  add_to_client.py  query_models.py  query_wandbot.py  query_weave.py  query_weave_raw.py  report.py  server.py  tool_prompts.py  trace_utils.py  utils.py
src/wandb_mcp_server/mcp_tools/: count_traces.py  create_report.py  query_wandb_gql.py  query_wandbot.py  query_weave.py  tools_utils.py
src/wandb_mcp_server/mcp_tools/code_sandbox/: __init__.py  e2b_sandbox.py  package.json  (+10 more)
src/wandb_mcp_server/tools/: count_traces.py  plan.py  query_wandb_gql.py  query_wandbot.py  tools_utils.py
src/wandb_mcp_server/weave_api/: client.py  service.py
src/weave_mcp_server/: __init__.py  query.py  server.py  trace_utils.py
tests/: README.md  __init__.py  anthropic_test_utils.py  conftest.py  test_count_tools.py  test_query_wandb_gql.py  test_query_wandbot.py  test_query_weave_comparison.py  test_query_weave_curl.py  test_query_weave_raw.py  test_query_weave_traces.py  test_sandbox_execution.py  test_sandbox_execution_fixed.py  test_sandbox_file_operations.py  test_sandbox_integration.py  test_sandbox_mcp_tool.py  test_sandbox_persistence.py  test_sandbox_realistic.py
tests/fixtures/: trace_response.json
